# transition

./: .dockerignore  .env.docker  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cursor  docker-compose.yml  knexfile.js  package.json
services/json2capnp/: .gitignore  Cargo.toml
services/json2capnp/src/: enum_mappings.rs  main.rs  routers.rs  utils.rs
services/json2capnp/src/capnp/: _generating_classes.txt  agencyCollection_capnp.rs  dataSourceCollection_capnp.rs  garageCollection_capnp.rs  include.rs  lineCollection_capnp.rs  nodeCollection_capnp.rs  odTripCollection_capnp.rs  odTrip_capnp.rs  personCollection_capnp.rs  placeCollection_capnp.rs  zone_capnp.rs
services/json2capnp/src/capnp/octavi/: taxiPointCollection_capnp.rs  taxiPoint_capnp.rs
services/json2capnp/src/errors/: mod.rs
services/json2capnp/src/my_error/: mod.rs
services/json2capnp/src/routers/: agency_collection_router.rs  data_source_collection_router.rs  garage_collection_router.rs  household_collection_router.rs  line_collection_router.rs  line_router.rs  mod.rs  node_collection_router.rs  node_router.rs  od_trip_collection_router.rs  path_collection_router.rs  person_collection_router.rs  place_collection_router.rs  scenario_collection_router.rs  service_collection_router.rs  station_collection_router.rs  taxi_point_collection_router.rs  unit_collection_router.rs  zone_collection_router.rs
services/json2capnp/test/: README
services/json2capnp/transition_capnp_data/: Cargo.toml
services/json2capnp/transition_capnp_data/src/: enum_mappings.rs  lib.rs
(+204 files in other folders)
