[package]
name = "json2capnp"
version = "0.2.0"
authors = ["Pierre-Léo Bourbonnais <leo.bourbonnais@polymtl.ca>"]
edition = "2018"

[dependencies]
json = "0.12"
capnp = "0.14"
rouille = "3.0"
serde_json = "1.0"
transition_capnp_data = { path = "transition_capnp_data" }

[dev-dependencies]
pretty_assertions = "0.6"