[package]
name = "json2capnp"
version = "0.2.0"
authors = ["Pierre-Léo Bourbonnais <leo.bourbonnais@polymtl.ca>"]
edition = "2018"

[dependencies]
json = "0.12"
capnp = "0.24"
rouille = "3.0"
serde_json = "1.0"
transition_capnp_data = { path = "transition_capnp_data" }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
pretty_assertions = "0.6"
